// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`submit > form is invalid 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="_r_2_"
        >
          test
        </label>
        <div
          class="uv_12pwfcp8 uv_12pwfcp5"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="uv_12pwfcp9"
            data-size="large"
            id="_r_2_"
            name="toto"
            type="text"
            value="4"
          />
        </div>
      </div>
      <button
        class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`submit > form is submitting 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <button
        class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        disabled=""
        type="submit"
      >
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="uv_1ehxqey2"
          role="progressbar"
          style="height: 1rem; width: 1rem;"
          viewBox="0 0 100 100"
        >
          <circle
            class="uv_1ehxqey1"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke-width="16"
          />
          <circle
            class="uv_1ehxqey3"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#ffffff"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`submit > renders correctly  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <button
        class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;
